hoisted background shade to app component to prevent background overflow

--- a/client/src/styles/components/_app.scss
+++ b/client/src/styles/components/_app.scss
@@ -6,6 +6,8 @@
     width: 100vw;
     min-height: 100vh;
     background-color: v.$light-grey;
+    overflow-y: scroll;
+    overflow-x: hidden;
     #attributeAuthor {
         position: absolute;
         left: 0;
@@ -14,5 +16,16 @@
         a {
             color: v.$red;
         }
+    }
+    .backgroundShade {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 5;
+        pointer-events: none;
+        background-color: transparent;
+        transition: .3s linear;
     }
 }
