--- a/client/src/styles/components/_dashboard.scss
+++ b/client/src/styles/components/_dashboard.scss
@@ -4,19 +4,6 @@
     position: relative;
     width: 100vw;
     min-height: 100vh;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    .backgroundShade {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        min-height: 100%;
-        z-index: 5;
-        pointer-events: none;
-        background-color: transparent;
-        transition: .3s linear;
-    }
 }
 
 header {
