--- a/client/src/styles/components/_expandedlist.scss
+++ b/client/src/styles/components/_expandedlist.scss
@@ -1,17 +1,9 @@
 @use './../variables' as v;
 
 .expandedListWrapper {
-    position: absolute;
-    left: 0;
-    right: 0;
-    width: 50%;
-    max-height: 600px;
     border: 1px solid v.$red;
     background-color: v.$light-grey;
-    margin: 0 auto;
     cursor: default;
-    transform: translateY(-100px);
-    z-index: 10;
     overflow-x: hidden;
     overflow-y: scroll;
     
@@ -25,7 +17,7 @@
         .itemsList {
             .expandedItem {
                 width: 50%;
-                margin-left: 30%;
+                margin-left: 20%;
                 margin-bottom: 10px;
                 .checkContainer {
                     display: block;
